syntax = "proto3";

import "grpcCommon/msg_error.proto"; // 错误码
package personal;
option java_multiple_files = true;
option java_package = "com.wanfang.personal";
option objc_class_prefix = "WFPR";


enum ThirdPartyType {
    QQ = 0; // qq登录
    SINA = 1; // 新浪微博登录
    WECHAT = 2; // 微信登录
    // 第三方类型code(0：QQ，1：微博，2：微信)
}
enum LoginDeviceType {
    ANDROID = 0; // 安卓设备
    IOS = 1; // iOS设备
}
// 登出
message LoginOutRequest {
    string user_id = 1; // 用户id
    string login_token = 2; // 单点登录token
}
message LoginOutResponse {
    grpcCommon.GrpcError error = 2;
}

// 登录请求msg
message LoginRequest {
    string password = 1; // 登录密码
    string user_name = 2; // 登录用户名
    string device_id = 3; // 设备号
    LoginDeviceType device_type = 4; // 登录设备类型
}
// 登录返回
message LoginResponse {
    string user_id = 1; // 用户id
    string user_nick_name = 2; // 用户昵称
    string user_real_name = 3; // 用户真实名称
    string user_used_name = 4; // 用户曾用名
    string user_avatar_url = 5; // 用户头像
    string login_token = 6; // 单点登录token
    grpcCommon.GrpcError error = 7;
}

// 快捷登录（手机号登录）-请求
message QuickLoginRequest {
    // 手机号
    string phone_number = 1;
}

//第三方登录-请求
message ThirdPartyLoginRequest {
    string uid = 1; // 第三方登录唯一码
    int32 third_party_code = 2; // 第三方类型code(0：QQ，1：微博，2：微信)
}

//第三方登录账号绑定-请求
message ThirdPartyBindRequest {
    string uid = 1; // 第三方登录唯一码
    string user_id = 2; //用户id
    int32 third_party_code = 3; // /第三方类型code
    int32 user_status = 4; //用户账号状态，默认0
}

//第三方登录账号绑定-响应
message ThirdPartyBindResponse {
    int32 bind_status = 1; // 绑定状态：200：成功；
    grpcCommon.GrpcError error = 2;
}




